--- a/style/main.css
+++ b/style/main.css
@@ -1,3 +1,5 @@
+
+
 * {
     margin: 0;
     padding: 0;
@@ -68,6 +70,7 @@ section {
     width: 100%;
     border:1px solid #e5e5e5;
 }
+
 
 .title {
     font-family:LiGothicMed;
@@ -191,4 +194,126 @@ button {
     color:#3b3d3e;
     letter-spacing:0px;
     line-height:35px;
+}
+
+.btn2 {
+    background:#ffffff;
+    border:2px solid #2f65eb;
+    border-radius:4px;
+    padding-left: 34px;
+    padding-right: 34px;
+    height:52px;
+    font-family:LiGothicMed;
+    font-size:28px;
+    color:#5082ff;
+    letter-spacing:0px;
+    text-align:center;
+}
+
+.btn1 {
+    float: left;
+    display: inline-block;
+}
+
+.btns {
+    display: inline-block;
+    width: auto;
+    margin-top: 30px;
+}
+
+.p {
+    float: left;
+    line-height: 56px;
+    padding: 0 30px;
+    font-family:AnonymicePowerline;
+    font-size:28px;
+    color:#666666;
+    letter-spacing:0px;
+    text-align:center;
+}
+
+.content5 {
+    margin-top: 30px;
+    margin-bottom: 50px;
+}
+
+.content5 .title {
+    width: 100%;
+}
+
+.about {
+    padding-top: 90px;
+    padding-bottom: 90px;
+    text-align: center;
+}
+
+.about h5 {font-family:LiGothicMed;
+    font-size:22px;
+    color:#666666;
+    letter-spacing:0px;
+    text-align:center;
+    margin-bottom: 30px;
+}
+
+.links li {
+    display: inline-block;
+    padding: 0 25px;
+}
+
+.links a {
+    font-family:AnonymicePowerline;
+    font-size:14px;
+    color:#666666;
+    letter-spacing:0px;
+    text-align:center;
+    text-decoration: none;
+}
+
+.copyright {
+    background:#f7f7f7;
+    width:100%;
+    height:50px;
+    line-height: 50px;
+    font-family:LucidaBright;
+    font-size:14px;
+    color:#999999;
+    text-align:center;
+
+}
+
+.content6 {
+    width: 100%;
+    text-align: center;
+}
+
+.profile {
+    width: 25%;
+    max-width: 300px;
+    display: inline-block;
+    text-align: center;
+}
+
+.staffProfile {
+    width: 100%;
+    display: block;
+}
+
+.staffName {
+    font-family:LiGothicMed;
+    font-size:22px;
+    color:#ffffff;
+    letter-spacing:0.38px;
+    text-align:center;
+    margin-top: -50px;
+
+}
+
+.manTitle {
+    font-family:AnonymicePowerline;
+    font-size:14px;
+    color:#ffffff;
+    letter-spacing:0.24px;
+    text-align:center;
+    margin-bottom: -50px;
+    display: block;
 }
